--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -8,7 +8,7 @@
   justify-content: center;
   display: grid;
   grid-template-columns: 2fr;
-  margin-top: 4rem;
+  margin-top: 2rem;
   gap: 20px;
 }
 .form {
@@ -29,7 +29,6 @@
   width: 300px;
   height: 30px;
   border-bottom: 1px solid #000;
-
   padding: 30px;
 }
 .contact-form input[type="email"] {
@@ -84,7 +83,7 @@
   padding: 30px;
   float: right;
   cursor: pointer;
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 .btn:hover {
   background-color: var(--color-primary);
@@ -96,7 +95,7 @@
 
 @media screen and (max-width: 540px) {
   .contact-form {
-    margin-top: 10rem;
+    margin-top: 2rem;
   }
   .contact-form {
     width: 100%;
