--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -28,7 +28,7 @@ h2 {
   font-size: 1.2em;
   font-family: "Roboto", sans-serif;
   color: var(--color-accent);
-  margin-top: 8em;
+  margin-top: 2em;
 }
 
 .quotes {
